--- a/research/exp.ipynb
+++ b/research/exp.ipynb
@@ -69,7 +69,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "PINECONE_API_KEY = \"pcsk_6xA4CN_8QtYnZFjDonR4UKavRQy5WHHfR3ZJFJwHgWVtbyo73AxpH8hDMs8f16xwNo5uqd\"\n",
+    "PINECONE_API_KEY = \"*************************************************\"\n",
     "PINECONE_API_ENV = \"us-east-1-aws\"\n"
    ]
   },
